1. Add to cart functionality 2. Remove from cart functionality 3. Added order history

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
   <%= render 'layouts/top_navbar' %>
-<%= yield %>
+  <div class="container" style="margin-top:100px">
+    <div id="notice">
+      <%= flash_messages %>
+    </div>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
