1. Added assumption of expired cart 2. Changes for product count

--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -17,7 +17,7 @@
   </tbody>
 </table>
 <div class="row pull-right">
-  <% if current_user.cart_items.present? %>
+  <% if @cart_items.present? %>
     <%= link_to "Checkout", cart_path(current_user.cart), class: "btn btn-success checkout" %>
   <% end %>
 </div>
