--- a/app/views/cart_items/summary.html.erb
+++ b/app/views/cart_items/summary.html.erb
@@ -6,10 +6,16 @@
   </tr>
   <tbody class='products'>
     <% if @cart_items.present? %>
-      <%= render 'cart_items' %>
+      <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td><%= cart_item.product_name %></td>
+          <td><%= cart_item.quantity %></td>
+          <td><%= cart_item.total %></td>
+        </tr>
+      <% end %>
     <% else %>
       <tr>
-        <td colspan="6" class="text-center">Cart is empty</td>
+        <td colspan="6" class="text-center">No products</td>
       </tr>
     <% end %>    
   </tbody>
