--- a/app/views/layouts/_top_navbar.html.erb
+++ b/app/views/layouts/_top_navbar.html.erb
@@ -1,28 +1,24 @@
 <nav class="navbar navbar-fixed-top" style="background:#99ccff;">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <%= link_to "Online Book Store", root_path, class: 'navbar-brand' %>
     </div>
     <div id="navbar" class="navbar-collapse collapse pull-right">
       <ul class="nav navbar-nav">
-        <li>
-          <%= link_to cart_items_path do %>
-            <span id="product-quantity"><%= current_user.try(:cart_items_count) %></span>
-            <i class="fa fa-shopping-cart fa-5"></i>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to "Orders", orders_path %>
-        </li>
-        <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.try(:email) %></span></a></li>
-        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <% if current_user && action_name != "summary" %>
+          <li>
+            <%= link_to cart_items_path do %>
+              <span id="product-quantity"><%= current_user.try(:cart_items_count) %></span>
+              <i class="fa fa-shopping-cart fa-5"></i>
+            <% end %>
+          </li>        
+          <li>
+            <%= link_to "Orders", orders_path %>
+          </li>
+          <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.try(:email) %></span></a></li>
+          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <% end %>
       </ul>
     </div>
   </div>
