--- a/app/views/cart_items/_cart_items.html.erb
+++ b/app/views/cart_items/_cart_items.html.erb
@@ -1,10 +1,16 @@
 <% @cart_items.each do |cart_item| %>
   <tr id="<%= cart_item.product_id %>">
-    <td><%= cart_item.product_name %></td>
+    <td>
+      <%= cart_item.product_name %>
+      <br/>
+      <% if cart_item.is_price_changed? %>
+        <span class="text-danger price_changed" style="font-size:10px;">*This product's price has been changed. Check before confirming order.</span>
+      <% end %>
+    </td>
     <td>
       <%= number_field_tag :product_quantity, cart_item.quantity, class: 'update-quantity', min: 1 %>
     </td>
-    <td>$<%= cart_item.product.price %></td>
+    <td>$<%= cart_item.product_price %></td>
     <td class='product-price'>$<%= cart_item.total_price %></td>
     <td>
       <%= link_to cart_item_path(id: cart_item), remote: true, data: { confirm: "Are you sure you want to delete", method: :delete } do %>
