Renamed confirm order method for controller and model

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -39,6 +39,6 @@
   </tbody>
 </table>
 <div class="row pull-right">
-  <%= link_to "Confirm", confirm_order_path, class: 'btn btn-success', data: { confirm: "Are you sure you want to continue?"} %>
+  <%= link_to "Confirm", confirm_path, class: 'btn btn-success', data: { confirm: "Are you sure you want to continue?"} %>
   <%= link_to "Cancel", cart_items_path, class: 'btn btn-danger' %>
 </div>
