Changes for confirm order

--- a/app/views/cart_items/summary.html.erb
+++ b/app/views/cart_items/summary.html.erb
@@ -10,7 +10,7 @@
         <tr>
           <td><%= cart_item.product_name %></td>
           <td><%= cart_item.quantity %></td>
-          <td><%= cart_item.total %></td>
+          <td>$<%= cart_item.total %></td>
         </tr>
       <% end %>
       <tr id="product-count">
